
Version 0.5	- xx xxx 2001
  * Add -g/--allglobals option to report all global warnings, not just first
  * Add test script and expected results
  * Print all instructions when using debug (-d/--debug)
  * Overhaul internal stack handling so we can look for more problems
  * Fix glob'ing problems (all args after glob were ignored)
  * Fix spurious Base class __init__ not called
  * Fix exception on code like:  ['xxx'].index('xxx')

Version 0.4	- 23 April 2001
  * Add .pycheckrc file processing to specify options (like on command line)
  * Add new warning if module.Attribute doesn't exist
  * Add new warning:  Module (%s) re-imported locally
  * Add glob'ing support for windows
  * Handle apply(BaseClass.__init__(self, args))
  * Fix command line handling so you can pass module, package, or filename
  * Fix **kwArgs warning if named parameter is not first
  * Don't exit from checker when import checker from interpreter

Version 0.3	- 17 April 2001
  * Fix some checker crashes (oops)
  * Add warnings for code complexity (lines/branches/returns per function)
  * Add more configuration options
  * Don't produce spurious warning for:  x(y, { 'a': 'b' })
  * Fix warnings that indicate they are from a base class file,
    rather than real file
  * Fix warnings for **kwArgs not allowed, but using named args
  * Add configuration option for warning when using attribute as a function
  	(off by default, old behaviour was on)

Version 0.2.5	- 12 April 2001
  * Add back support for Python 1.5.2 (again)
  	(I sure like 2.0 more with the [ for ] and string methods.)
  * Add new warning for unused local variables
  * Add command line switches

Version 0.2	- 10 April 2001
  * Move tests into a sub-directory so import test doesn't import pychecker/test
  * Add more test files
  * Add '.' to the python path so it doesn't need to be done in env't
  * Print a warning at the end for each file that couldn't be import'ed
  * Improve stack handling to improve error handling