@@ -1,1 +1,1 @@
-*.pyc
+build
