@@ -1,5 +1,4 @@
 
-* Use a unique prefix for checker source filenames so they don't clash w/input
 * Fix sys.exc_value, etc. generating No attribute warning in except clause
 * Fix Local variable (xxx) not used, when have:  "%(xxx)s" % locals()
 * Check format strings: "%s %d" % (strValue, intValue)
