@@ -1,0 +1,11 @@
+"""
+Copyright (c) 2001, MetaSlash Inc.  All rights reserved.
+
+PyChecker is a tool for finding common bugs in python source code.
+It finds problems that are typically caught by a compiler for less
+dynamic languages, like C and C++.  Because of the dynamic nature
+
+Contact Info:
+  http://pychecker.sourceforge.net/
+  pychecker@metaslash.com
+"""
